# sw-group-tt

./: .dockerignore  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
SWGroup/: asgi.py  settings.py  urls.py  wsgi.py
mis/: models.py  serializers.py  tests.py  urls.py  views.py
mis/migrations/: 0001_initial.py  0002_consultations_created_at_alter_consultations_clinic_and_more.py
